--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -31,20 +31,21 @@ gcode:
 [gcode_macro G28]
 rename_existing: G999928
 gcode:
+    G90
     {% set do_x = 0 %}
     {% set do_y = 0 %}
     {% set do_z = 0 %}
-    {% if params.X is defined %}
-         _MOVE_Z_UP
-         _HOME_X
-    {% else %}
-        {% set do_x = 1 %} 
-    {% endif %}
     {% if params.Y is defined %}
          _MOVE_Z_UP
          _HOME_Y
     {% else %}
          {% set do_y = 1 %} 
+    {% endif %}
+    {% if params.X is defined %}
+         _MOVE_Z_UP
+         _HOME_X
+    {% else %}
+        {% set do_x = 1 %} 
     {% endif %}
     {% if params.Z is defined %}
          G999928 Z0
@@ -55,9 +56,11 @@ gcode:
          _MOVE_Z_UP
          HOME_ALL
     {% endif %}
+    G90
 
 [gcode_macro _HOME_X]
 gcode:
+    G90
     #SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.400 HOLDCURRENT=0.400
     #SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.400 HOLDCURRENT=0.400
     G4 P2000
@@ -75,6 +78,7 @@ gcode:
 
 [gcode_macro _HOME_Y]
 gcode:
+    G90
     #SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.400 HOLDCURRENT=0.400
     #SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.400 HOLDCURRENT=0.400
     G4 P2000
@@ -84,10 +88,10 @@ gcode:
     #SET_TMC_CURRENT STEPPER=stepper_y CURRENT={printer.configfile.config["tmc2209 stepper_y"]["run_current"]} HOLDCURRENT={printer.configfile.config["tmc2209 stepper_y"]["hold_current"]}
     G4 P1000
     G91
-    {% if printer.configfile.config["stepper_y"]["position_endstop"]|int < 10 %}
-    G1 Y10 F2000
+    {% if printer.configfile.config["stepper_y"]["position_endstop"]|int < 30 %}
+    G1 Y30 F2000
     {% else %}
-    G1 Y-10 F2000
+    G1 Y-30 F2000
     {% endif %}
 
 [homing_override]
@@ -142,16 +146,17 @@ gcode:
     {% endif %}
     _DEPLOY_TOUCHMI
     Z_TILT_ADJUST
+    G999928 Z0
     {% endif %}
 
 [gcode_macro BED_MESH_CALIBRATE]
-rename_existing: OLDBED_MESH_CALIBRATE
+rename_existing: BASE_MESH_CALIBRATE
 gcode: 
     {% if not 'xyz' in printer.toolhead.homed_axes %}
     HOME_ALL
     {% endif %}
     _MZ_TILT_ADJUST
-    OLDBED_MESH_CALIBRATE
+    BASE_MESH_CALIBRATE
     _RETRACT_TOUCHMI
 
 [gcode_macro G29]
@@ -172,7 +177,6 @@ gcode:
     _DEPLOY_TOUCHMI
     G999928 Z0
     _MZ_TILT_ADJUST
-    G999928 Z0
     _RETRACT_TOUCHMI
 
 ########################
