--- a/vking/printer-mmu2s-board.cfg
+++ b/vking/printer-mmu2s-board.cfg
@@ -26,7 +26,7 @@ default_type: command
 uart_pin: mmboard:PC14
 run_current: 1.000
 hold_current: 0.600
-interpolate: True
+interpolate: False
 sense_resistor: 0.110
 #stealthchop_threshold: 200
 
@@ -50,12 +50,12 @@ accel: 1500 # same value that your printer accel
 uart_pin: mmboard:PB7
 run_current: 0.800
 hold_current: 0.800
-interpolate: True
+interpolate: False
 sense_resistor: 0.110
 stealthchop_threshold: 100
 # comment this two line if you don't use sensorless
 diag_pin: ^mmboard:PA1 # Y+
-driver_SGTHRS: 75
+driver_SGTHRS: 70
 
 [manual_stepper idler_stepper]
 step_pin: mmboard:PB13
@@ -78,7 +78,7 @@ homing_retract_dist: 0
 #microsteps: 16
 #run_current: 1.000
 #hold_current: 0.400
-#interpolate: True
+#interpolate: False
 #sense_resistor: 0.110
 #stealthchop_threshold: 250
 ## comment this two line if you don't use sensorless
