--- a/vking/printer-mmu2s-config.cfg
+++ b/vking/printer-mmu2s-config.cfg
@@ -46,7 +46,7 @@ variable_idler = [5,20,35,50,65]
 variable_idler_home_position: 85
 variable_pause_x: 125
 variable_pause_x_out: 125
-variable_pause_y: -14
+variable_pause_y: -14.2
 variable_pause_y_out: 20
 variable_pause_z: 10
 variable_min_temp_extruder: 180
@@ -65,8 +65,8 @@ variable_t3_purge_load_length: 40
 variable_t3_purge_unload_length: 0
 variable_t4_purge_load_length: 40
 variable_t4_purge_unload_length: 0
-variable_splitter_endstop: 0
 variable_enable_length_sensor: 0
+variable_enable_debug: 0
 gcode:
 
 # MMU2S STANDARD
@@ -91,9 +91,7 @@ gcode:
         {% set p = p.append(key + '=' + params[key])  %}
     {% endfor %}
     {% if printer["gcode_macro _VAR_MMU2S"].btt_mmu == 1 %}
-#       M400
         MMU_MOVE_STEPPER { p|join(" ") }
-#       M400
    {% else %}
         MANUAL_STEPPER { p|join(" ") }
    {% endif %}
