--- a/vam8-bowden/printer.cfg
+++ b/vam8-bowden/printer.cfg
@@ -283,11 +283,11 @@ kill_pin: ^!P1.22
 [virtual_sdcard]
 path: ~/gcode_files
 
-[firmware_retraction]
-retract_length: 2.80
-retract_speed: 60
-unretract_extra_length: 0
-unretract_speed: 60
+#[firmware_retraction]
+#retract_length: 2.80
+#retract_speed: 60
+#unretract_extra_length: 0
+#unretract_speed: 60
 
 [force_move]
 enable_force_move: True
