--- a/vam8-direct/printer.cfg
+++ b/vam8-direct/printer.cfg
@@ -15,8 +15,9 @@ step_pin: P2.1
 dir_pin: !P0.11
 enable_pin: !P0.10
 #step_distance: .00625
+microsteps: 64
 rotation_distance: 40
-microsteps: 32
+full_steps_per_rotation: 200
 endstop_pin: ^!P1.24
 position_endstop: -8
 position_min: -8
@@ -28,8 +29,9 @@ step_pin: P2.2
 dir_pin: !P0.20
 enable_pin: !P0.19
 #step_distance: .005
+microsteps: 64
 rotation_distance: 32
-microsteps: 32
+full_steps_per_rotation: 200
 endstop_pin: ^!P1.26
 position_endstop: -38
 position_min: -38
@@ -41,8 +43,9 @@ step_pin: P2.3
 dir_pin: !P0.22
 enable_pin: !P0.21
 #step_distance: .00125
-rotation_distance: 8
 microsteps: 32
+rotation_distance: 8
+full_steps_per_rotation: 200
 endstop_pin: probe:z_virtual_endstop
 position_min: -5
 position_max: 210
@@ -51,25 +54,26 @@ homing_speed: 5
 [tmc2209 stepper_x]
 uart_pin: P1.1
 run_current: 1.0
-hold_current: 0.6
-interpolate: True
+#hold_current: 0.6
+interpolate: False
 sense_resistor: 0.110
-stealthchop_threshold: 250
+stealthchop_threshold: 0
 
 [tmc2209 stepper_y]
 uart_pin: P1.4
 run_current: 1.0
-hold_current: 0.6
-interpolate: True
+#hold_current: 0.6
+interpolate: False
 sense_resistor: 0.110
-stealthchop_threshold: 250
+stealthchop_threshold: 0
 
 [tmc2208 stepper_z]
 uart_pin: P1.10
 run_current: 0.8
-hold_current: .6
-interpolate: True
+#hold_current: .6
+interpolate: False
 sense_resistor: 0.110
+stealthchop_threshold: 0
 
 ##################################
 #
@@ -105,13 +109,13 @@ spi_software_sclk_pin: P1.9
 spi_software_mosi_pin: P1.8
 spi_software_miso_pin: P1.0
 run_current: .55
-hold_current: .3
+#hold_current: .3
 #microsteps: 8
 #run_current: 1.000
 #hold_current: 0.800
-interpolate: True
+interpolate: False
 sense_resistor: 0.110
-#stealthchop_threshold: 50
+stealthchop_threshold: 0
 
 
 [heater_bed]
