--- a/blv/printer-mmu2s-config.cfg
+++ b/blv/printer-mmu2s-config.cfg
@@ -33,6 +33,7 @@
 variable_tmc2209_sensorless: 1
 variable_timeout_pause: 36000
 variable_disable_heater: 600
+variable_insert_into_mmu_length: 200
 variable_bowden_load_length1: 0
 variable_bowden_load_length2: 90
 variable_bowden_unload_length: 20
@@ -65,8 +66,8 @@ variable_t3_purge_load_length: 40
 variable_t3_purge_unload_length: 0
 variable_t4_purge_load_length: 40
 variable_t4_purge_unload_length: 0
-variable_splitter_endstop: 0
 variable_enable_length_sensor: 0
+variable_enable_debug: 0
 gcode:
 
 # MMU2S STANDARD
