--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -138,6 +138,16 @@ gcode:
     G1 Z0 F300
     G1 Z10 F300
 
+[gcode_macro SCREWS_TILT_CALCULATE]
+rename_existing: BASE_SCREWS_TILT_CALCULATE
+gcode:
+    {% if not 'xyz' in printer.toolhead.homed_axes %}
+    HOME_ALL
+    {% endif %}
+    _DEPLOY_TOUCHMI
+    BASE_SCREWS_TILT_CALCULATE
+    _RETRACT_TOUCHMI
+
 [gcode_macro _MZ_TILT_ADJUST]
 gcode:
     {% if printer["gcode_macro _VARS_PRINTER"].enable_z_tilt|int == 1 %}
@@ -186,6 +196,12 @@ gcode:
 ########################
 # Replace the slicer's custom start and end g-code scripts with
 # START_PRINT and END_PRINT.
+[delayed_gcode _PARK_PURGE]
+initial_duration: 0.1
+gcode:
+	{% if printer["gcode_macro _VARS_PRINTER"].enable_servo|int ==1 %}
+		_PARK_PURGE
+	{% endif %}
 
 [gcode_macro START_PRINT]
 gcode:
@@ -193,7 +209,7 @@ gcode:
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(0)|float %}
     {% set LOAD = params.LOAD|default(-1)|int %}
     {% if printer["gcode_macro _VARS_PRINTER"].enable_servo|int ==1 %}
-    SET_SERVO SERVO=purge_servo angle=0
+    _PARK_PURGE
     {% endif %}
     # metric values
     G21
@@ -213,6 +229,8 @@ gcode:
     CLEAR_PAUSE
     # Home the printer
     HOME_ALL
+    # Load mesh
+    BED_MESH_PROFILE LOAD=default
     # Move the nozzle near the bed
     G1 Z15 F3000
     # Set and wait for nozzle to reach temperature
