--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -330,6 +330,29 @@ gcode:
 
 ############################################
 #
+# HELP TO INSERT FILAMENT IN MMU
+# LOADING FILAMENT MMU
+#
+############################################
+
+# Load filament IN MMU
+[gcode_macro INSERT_FILAMENT_INTO_MMU]
+gcode:
+	{% if printer["gcode_macro HOME_MMU"].home != -1 %}
+		MMU_RESPOND MSG="Loading {params.VALUE|default(0)|int} ..."
+		SELECT_TOOL VALUE={params.VALUE|default(0)|int}
+		G91
+		_MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+		_MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro _VAR_MMU2S"].insert_into_mmu_length} SPEED=50
+		_MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+		UNSELECT_TOOL
+		MMU_RESPOND MSG="Loading done for {params.VALUE|default(0)|int} in MMU"
+	{% else %}
+		MMU_RESPOND MSG="MMU not homed"
+	{% endif %}
+
+############################################
+#
 # Select/Unselect a tool
 # move the idler and the color selector (if needed) to the requested tool (0-4)
 #
@@ -393,6 +416,10 @@ gcode:
 	SET_SERVO SERVO=purge_servo angle=170
 	G90
 	G1 X{printer["gcode_macro _VAR_MMU2S"].pause_x} Y{printer["gcode_macro _VAR_MMU2S"].pause_y} F9000
+
+[gcode_macro _PARK_PURGE]
+gcode:
+	SET_SERVO SERVO=purge_servo angle=0
 
 [gcode_macro _RETRACT_PURGE]
 gcode:
