--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -1044,6 +1044,8 @@ gcode:
 	G91
 	G1 Z{printer["gcode_macro _VAR_MMU2S"].pause_z}
 	G90
+	G1 Y{printer["gcode_macro _VAR_MMU2S"].pause_y_out} F3000
+	G1 X{printer["gcode_macro _VAR_MMU2S"].pause_x_out} F3000
 	G1 X{printer["gcode_macro _VAR_MMU2S"].pause_x} Y{printer["gcode_macro _VAR_MMU2S"].pause_y} F3000
 	_UT
 	QUERY_ENDSTOPS
