--- a/vam8-bowden/printer.cfg
+++ b/vam8-bowden/printer.cfg
@@ -175,7 +175,7 @@ step_pin: P2.8
 dir_pin: P2.13
 enable_pin: !P4.29
 #step_distance: 0.00211416
-microsteps: 16
+microsteps: 32
 rotation_distance: 6.765312
 nozzle_diameter: 0.8
 filament_diameter: 1.750
@@ -283,11 +283,11 @@ kill_pin: ^!P1.22
 [virtual_sdcard]
 path: ~/gcode_files
 
-#[firmware_retraction]
-#retract_length: 2.80
-#retract_speed: 60
-#unretract_extra_length: 0
-#unretract_speed: 60
+[firmware_retraction]
+retract_length: 2.80
+retract_speed: 60
+unretract_extra_length: 0
+unretract_speed: 60
 
 [force_move]
 enable_force_move: True
@@ -391,6 +391,6 @@ gcode:
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 29.653
-#*# pid_ki = 1.607
-#*# pid_kd = 136.774
+#*# pid_kp = 33.707
+#*# pid_ki = 1.628
+#*# pid_kd = 174.433
