--- a/blv/printer-mmu2s-config.cfg
+++ b/blv/printer-mmu2s-config.cfg
@@ -45,7 +45,7 @@ variable_unload_in_extruder2: 30
 variable_colorselector = [73.5,57.5,45.5,31.5,18.5]
 variable_idler = [5,20,35,50,65]
 variable_idler_home_position: 85
-variable_pause_x: 2
+variable_pause_x: 17
 variable_pause_x_out: 40
 variable_pause_y: -45
 variable_pause_y_out: 0
@@ -56,6 +56,7 @@ variable_enable_5in1: 1
 variable_purge_after_load: 1
 variable_purge_speed: 200
 variable_enable_purge_servo: 1
+variable_servo_angle_deploy:150
 variable_t0_purge_load_length: 40
 variable_t0_purge_unload_length: 0
 variable_t1_purge_load_length: 40
