--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -413,7 +413,7 @@ gcode:
 		G90
 	{% endif %}
 	G4 P1000
-	SET_SERVO SERVO=purge_servo angle=170
+	SET_SERVO SERVO=purge_servo angle={printer["gcode_macro _VAR_MMU2S"].servo_angle_deploy}
 	G90
 	G1 X{printer["gcode_macro _VAR_MMU2S"].pause_x} Y{printer["gcode_macro _VAR_MMU2S"].pause_y} F9000
 
@@ -1297,7 +1297,22 @@ gcode:
 		_IS_FILAMENT_STUCK_IN_EXTRUDER
 	{% endif %}
 
+###############################################
 
-
+[gcode_macro TEST_FILAMETRIX]
+gcode:
+	_DEPLOY_PURGE
+	G91
+	G1 E100 F300
+	G90
+	_RETRACT_PURGE
+	_DEPLOY_PURGE
+	G1 X110 F2000
+	G1 X-1 F3000
+	_RETRACT_PURGE
+	G1 X110 F2000
+	G91
+	G1 E-100 F300
+	G90
 
 ###############################################
