--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -1,5 +1,14 @@
 ###########################################################################
 ###########################################################################
+[menu __main __octoprint]
+type: disabled
+
+###########   MAINSAIL #
+[gcode_shell_command telegram]
+command: sh /home/pi/moonraker-telegram/scripts/telegram.sh "this is a message from your printer"
+timeout: 2.
+verbose: false
+
 ###########################################################################
 ###########################################################################
 
