--- a/vam8-direct/printer.cfg
+++ b/vam8-direct/printer.cfg
@@ -157,7 +157,7 @@ fan_speed: 1.0
 ##################################
 
 [virtual_sdcard]
-path: ~/gcode_files
+path: /home/pi/printer_data/gcodes
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_lpc1768_0810001687242EAFB66B575BC32000F5-if00
@@ -260,5 +260,28 @@ variable_change_length_slow: 120
 variable_change_length_fast: 0
 gcode:
 
+[gcode_macro _CLIENT_VARIABLE]
+variable_use_custom_pos   : True ; use custom park coordinates for x,y [True/False]
+variable_custom_park_x    : 10.0   ; custom x position; value must be within your defined min and max of X
+variable_custom_park_y    : 10.0   ; custom y position; value must be within your defined min and max of Y
+variable_custom_park_dz   : 20.0   ; custom dz value; the value in mm to lift the nozzle when move to park position
+variable_retract          : 1.0   ; the value to retract while PAUSE
+variable_cancel_retract   : 5.0   ; the value to retract while CANCEL_PRINT
+variable_speed_retract    : 35.0  ; retract speed in mm/s
+variable_unretract        : 1.0   ; the value to unretract while RESUME
+variable_speed_unretract  : 35.0  ; unretract speed in mm/s
+variable_speed_hop        : 15.0  ; z move speed in mm/s
+variable_speed_move       : 100.0 ; move speed in mm/s
+variable_park_at_cancel   : True ; allow to move the toolhead to park while execute CANCEL_PRINT [True/False]
+variable_park_at_cancel_x : 10.0  ; different park position during CANCEL_PRINT [None/Position as Float]; park_at_cancel must be True
+variable_park_at_cancel_y : 10.0  ; different park position during CANCEL_PRINT [None/Position as Float]; park_at_cancel must be True
+## !!! Caution [firmware_retraction] must be defined in the printer.cfg if you set use_fw_retract: True !!!
+variable_use_fw_retract   : False ; use fw_retraction instead of the manual version [True/False]
+variable_idle_timeout     : 0     ; time in sec until idle_timeout kicks in. Value 0 means that no value will be set or restored
+gcode:
+
 [include  printer-macros.cfg]
-[include  printer-mainsail.cfg]
+#[include  printer-mainsail.cfg]
+[include mainsail.cfg]
+
+
