--- a/blv/printer-mmu2s-length-sensors.cfg
+++ b/blv/printer-mmu2s-length-sensors.cfg
@@ -1,50 +1,47 @@
 
 [mcu sensorboard]
-serial: /dev/ttyUSB0
-pin_map: arduino
+serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_8095060110134753384C4E00-if00
 
-[filament_length_sensor l1]
-spi_speed: 4000000
-#   The SPI speed (in hz) to use when communicating with the chip.
-#   The default is 4000000.
-spi_bus: spi
-#spi_speed: 1000000
-#spi_software_sclk_pin: mmboard:PB3
-#spi_software_mosi_pin: mmboard:PB5
-# spi_software_miso_pin: mmboard:PB4
-#   These optional parameters allow one to customize the SPI settings
-#   used to communicate with the chip.
-sensor_pin: sensorboard:ar10
-#   The chip select line for the sensor chip. This parameter must be
-#   provided.
-#   118 pulse per rotation, mk8 circumference 21mm
-#   pulse_length = 118/21
-#   118 pulse per rotation, delrin wheel circumference 50
-#   pulse_length = 118/50
-pulse_length: 2.5
-enable: False
-#   Sensor enabled or disabled after power on. The default is to
-#   disable.
-max_mm_difference: 2.1
-max_mm_difference2: 10.0
-nb_error_needed: 3
-nb_value_ignore_at_start: 5
+[filament_motion_sensor FMS_T1]
+detection_length: 10.0
+#   The minimum length of filament pulled through the sensor to trigger
+#   a state change on the switch_pin
+#   Default is 7 mm.
 extruder: extruder
-#See [filament_switch_sensor] for a description of these parameters.
-pause_on_runout: False
-#   When set to True, a PAUSE will execute immediately after a runout
-#   is detected. Note that if pause_on_runout is False and the
-#   runout_gcode is omitted then runout detection is disabled. Default
-#   is True.
-#runout_gcode:
-#    M118 jamming/runout detected
-#    PAUSE_MMU
-#   A list of G-Code commands to execute after a filament runout is
-#   detected. See docs/Command_Templates.md for G-Code format. If
-#   pause_on_runout is set to True this G-Code will run after the
-#   PAUSE is complete. The default is not to run any G-Code commands.
+#   The name of the extruder section this sensor is associated with.
+#   This parameter must be provided.
+switch_pin: sensorboard:PA4
+#pause_on_runout:
+runout_gcode:
+	M117 Runout Detected!
 #insert_gcode:
-#   A list of G-Code commands to execute after a filament insert is
-#   detected. See docs/Command_Templates.md for G-Code format. The
-#   default is not to run any G-Code commands, which disables insert
-#   detection.
+#event_delay:
+#pause_delay:
+#   See the "filament_switch_sensor" section for a description of the
+#   above parameters.
+
+[delayed_gcode DISABLEFILAMENTSENSOR] ; This will disable the FMS 1 second after klipper starts
+initial_duration: 1
+gcode:
+    SET_FILAMENT_SENSOR SENSOR=FMS_T1 ENABLE=0 ; Put your filament sensor's name after SENSOR=
+
+[gcode_macro FMS_ENABLE_T1] ; Add this to PRINT_START
+description: Enable smart filament sensor
+gcode:
+    M117 ENABLING the Smart Filament Sensor
+    G92 E0
+    SET_FILAMENT_SENSOR SENSOR=FMS_T1 ENABLE=1 ; Put your filament sensor's name after SENSOR=
+
+[gcode_macro FMS_DISABLE_T1] ; Add this to PRINT_END and PRINT_CANCEL
+description: Disable smart filament sensor 
+gcode:
+    M117 DISABLING the Smart Filament Sensor
+    G92 E0
+    SET_FILAMENT_SENSOR SENSOR=FMS_T1 ENABLE=0 ; Put your filament sensor's name after SENSOR=
+
+#[gcode_button my_gcode_button]
+#pin: sensorboard:PA4
+#press_gcode:
+#	M117 push
+#release_gcode:
+#	M117 released
