--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -21,8 +21,14 @@ gcode:
 ###############################
 [gcode_macro MMU_ENABLE_DEBUG]
 gcode:
-	{% set ON = params.ON|default(0)|int %}
-	SET_GCODE_VARIABLE MACRO=_VAR_MMU2S VARIABLE=enable_debug VALUE={ON}
+	{% set ON = params.ON|default(1)|int %}
+	{% if ON == 0 %}
+		RESPOND MSG="Disable MMU DEBUG"
+		SET_GCODE_VARIABLE MACRO=_VAR_MMU2S VARIABLE=enable_debug VALUE=False
+	{% else %}
+		RESPOND MSG="Enable MMU DEBUG"
+		SET_GCODE_VARIABLE MACRO=_VAR_MMU2S VARIABLE=enable_debug VALUE=True
+	{% endif %}
 
 [gcode_macro MMU_RESPOND]
 gcode:
@@ -116,10 +122,10 @@ gcode:
 gcode:
 	RESPOND MSG="Enstop status :"
 	RESPOND MSG="- Extruder : {printer["filament_switch_sensor ir_sensor"].filament_detected}"
-	{% if printer["gcode_macro _VAR_MMU2S"].enable_5in1 == 0 %}
+	{% if not printer["gcode_macro _VAR_MMU2S"].enable_5in1 %}
 		RESPOND MSG="- PINDA	: {printer.query_endstops.last_query["manual_stepper gear_stepper"]}"
 	{% endif %}
-	{% if printer["gcode_macro _VAR_MMU2S"].tmc2209_sensorless == 1 %}
+	{% if printer["gcode_macro _VAR_MMU2S"].tmc2209_sensorless %}
 		RESPOND MSG="- Selector : {printer.query_endstops.last_query["manual_stepper selector_stepper"]}"
 	{% endif %}
 
@@ -208,7 +214,7 @@ gcode:
 		RESPOND MSG="Print is not paused. Resume ignored"
 	{% else %}
 		{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
-			{% if printer["filament_switch_sensor ir_sensor"].filament_detected == True %}
+			{% if printer["gcode_macro _VAR_MMU2S"].enable_sensor_before_gear or printer["filament_switch_sensor ir_sensor"].filament_detected %}
 				RESPOND MSG="Resume print ..."
 				RESTORE_GCODE_STATE NAME=PAUSE_MMU_state MOVE=1 MOVE_SPEED=100
 				G90
@@ -230,65 +236,55 @@ gcode:
 #
 ############################################
 
-[gcode_macro T0]
+[gcode_macro TX]
 gcode:
-	SET_DISPLAY_TEXT MSG="Change Tool T0"
-	RESPOND MSG="T0"
-	{% if printer["gcode_macro SELECT_TOOL"].color_selected|int != 0 %}
+	{% set EXTRUDER = params.EXTRUDER|default(0)|int %}
+	SET_DISPLAY_TEXT MSG="Change Tool T{EXTRUDER}"
+	RESPOND MSG="T{EXTRUDER}"
+	{% if printer["gcode_macro SELECT_TOOL"].color_selected|int != EXTRUDER %}
+		G91
+		G1 Z0.2
+		G90
+		SAVE_GCODE_STATE NAME=_MMU_TX
+		{% set prev_pa = printer.extruder.pressure_advance %}
+		SET_PRESSURE_ADVANCE ADVANCE=0 # temporaily disable PA
+		{% if printer["gcode_macro _VAR_MMU2S"].enable_purge_servo %}
+			_DEPLOY_PURGE
+		{% endif %}
 		_UT
-		_LT VALUE=0
+		_LT VALUE={EXTRUDER}
+		{% if printer["gcode_macro _VAR_MMU2S"].enable_purge_servo %}
+			_RETRACT_PURGE
+		{% endif %}
+		SET_PRESSURE_ADVANCE ADVANCE={prev_pa} # restore PA
+		RESTORE_GCODE_STATE NAME=_MMU_TX MOVE_SPEED=250
+		G91
+		G1 Z-0.2
+		G90
 	{% else %}
 		SET_DISPLAY_TEXT MSG="No change needed"
 	{% endif %}
-	SET_DISPLAY_TEXT MSG="T0 Loaded"
+	SET_DISPLAY_TEXT MSG="T{EXTRUDER} Loaded"
+
+[gcode_macro T0]
+gcode:
+	TX EXTRUDER=0
 
 [gcode_macro T1]
 gcode:
-	SET_DISPLAY_TEXT MSG="Change Tool T1"
-	RESPOND MSG="T1"
-	{% if printer["gcode_macro SELECT_TOOL"].color_selected|int != 1 %}
-		_UT
-		_LT VALUE=1
-	{% else %}
-		SET_DISPLAY_TEXT MSG="No change needed"
-	{% endif %}
-	SET_DISPLAY_TEXT MSG="T1 Loaded"
+	TX EXTRUDER=1
 
 [gcode_macro T2]
 gcode:
-	SET_DISPLAY_TEXT MSG="Change Tool T2"
-	RESPOND MSG="T2"
-	{% if printer["gcode_macro SELECT_TOOL"].color_selected|int != 2 %}
-		_UT
-		_LT VALUE=2
-	{% else %}
-		SET_DISPLAY_TEXT MSG="No change needed"
-	{% endif %}
-	SET_DISPLAY_TEXT MSG="T2 Loaded"
+	TX EXTRUDER=2
 
 [gcode_macro T3]
 gcode:
-	SET_DISPLAY_TEXT MSG="Change Tool T3"
-	RESPOND MSG="T3"
-	{% if printer["gcode_macro SELECT_TOOL"].color_selected|int != 3 %}
-		_UT
-		_LT VALUE=3
-	{% else %}
-		SET_DISPLAY_TEXT MSG="No change needed"
-	{% endif %}
-	SET_DISPLAY_TEXT MSG="T3 Loaded"
+	TX EXTRUDER=3
 
 [gcode_macro T4]
 gcode:
-	SET_DISPLAY_TEXT MSG="Change Tool T4"
-	RESPOND MSG="T4"
-	{% if printer["gcode_macro SELECT_TOOL"].color_selected|int != 4 %}
-		_UT
-		_LT VALUE=4
-	{% else %}
-		SET_DISPLAY_TEXT MSG="No change needed"
-	{% endif %}
-	SET_DISPLAY_TEXT MSG="T4 Loaded"
+	TX EXTRUDER=4
 
 ############################################
 #
@@ -304,13 +300,6 @@ gcode:
 		SELECT_TOOL VALUE={params.VALUE|int}
 		_LOAD_FILAMENT_TO_EXTRUDER
 		_LOAD_FILAMENT_IN_EXTRUDER
-		{% if printer["gcode_macro _VAR_MMU2S"].enable_length_sensor == 1 %}
-				{% if params.VALUE|int == 1 %}
-					M400
-					RESET_FILAMENT_LENGTH_SENSOR
-					ENABLE_FILAMENT_LENGTH_SENSOR
-				{% endif %}
-		{% endif %}
 	{% endif %}
 
 # Unload filament from nozzle to MMU2S
@@ -319,9 +308,6 @@ gcode:
 	{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 		{% if printer["gcode_macro SELECT_TOOL"].color_selected|int != -1 %}
 			MMU_RESPOND MSG="_UT {printer["gcode_macro SELECT_TOOL"].color_selected|int} ..."
-			{% if printer["gcode_macro _VAR_MMU2S"].enable_length_sensor == 1 %}
-				DISABLE_FILAMENT_LENGTH_SENSOR
-			{% endif %}
 			SELECT_TOOL VALUE={printer["gcode_macro SELECT_TOOL"].color_selected|int}
 			_UNLOAD_FILAMENT_IN_EXTRUDER
 			_UNLOAD_FILAMENT_FROM_EXTRUDER
@@ -368,7 +354,7 @@ gcode:
 	{% if printer["gcode_macro HOME_MMU"].home != -1 %}
 		MMU_RESPOND MSG="Select Tool {params.VALUE} ..."
 		_MMU_MANUAL_STEPPER STEPPER=idler_stepper MOVE={printer["gcode_macro _VAR_MMU2S"].idler[params.VALUE|int]}
-		{% if printer["gcode_macro _VAR_MMU2S"].enable_5in1 == 0 %}
+		{% if not printer["gcode_macro _VAR_MMU2S"].enable_5in1 %}
 		_MMU_MANUAL_STEPPER STEPPER=selector_stepper MOVE={printer["gcode_macro _VAR_MMU2S"].colorselector[params.VALUE|int]}
 		{% endif %}
 		SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=tool_selected VALUE={params.VALUE}
@@ -441,7 +427,7 @@ gcode:
 variable_purge_length: 60
 variable_purge_max: 60
 gcode:
-	{% if printer["gcode_macro _VAR_MMU2S"].enable_purge_servo == 1 %}
+	{% if printer["gcode_macro _VAR_MMU2S"].enable_purge_servo %}
 		MMU_RESPOND MSG="Purging : {purge_length|int} mm"
 		G91
 		G92 E0
@@ -456,17 +442,10 @@ gcode:
 		MMU_RESPOND MSG="Could not purge with servo, not enabled ..."
 	{% endif %}
 
-[gcode_macro _CHECK_JAMMING]
-gcode:
-	{% if printer["gcode_macro _VAR_MMU2S"].enable_length_sensor == 1 %}
-		MMU_RESPOND MSG="capteur  : {printer["filament_length_sensor l1"].length|float}"
-		MMU_RESPOND MSG="extruder : {printer["filament_length_sensor l1"].extruder_position|float}"
-	{% endif %}
-
 [gcode_macro _PURGE_FILAMENT]
 variable_purge_length: 0
 gcode:
-	{% if printer["gcode_macro _VAR_MMU2S"].purge_after_load == 1 %}
+	{% if printer["gcode_macro _VAR_MMU2S"].purge_after_load %}
 	{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 	{% if printer.extruder.temperature > printer["gcode_macro _VAR_MMU2S"].min_temp_extruder %}
 		MMU_RESPOND MSG="Purging Filament..."
@@ -506,21 +485,23 @@ gcode:
 			{% set purge_length = purge_length + printer["gcode_macro _VAR_MMU2S"].t4_purge_load_length %}
 		{% endif %}
 		G92 E0
-		{% if printer["gcode_macro _VAR_MMU2S"].enable_length_sensor == 1 %}
-				RESET_FILAMENT_LENGTH_SENSOR
+		{% if printer["gcode_macro _VAR_MMU2S"].enable_motion_sensor %}
+		{% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 1 %}
+			FMS_ENABLE_T1
 		{% endif %}
-		{% if printer["gcode_macro _VAR_MMU2S"].enable_purge_servo == 1 %}
+		{% endif %}
+		{% if printer["gcode_macro _VAR_MMU2S"].enable_purge_servo %}
 				_MOVE_PURGE_FILAMENT purge_length={purge_length}
 		{% else %}
 				G1 E{purge_length} F{printer["gcode_macro _VAR_MMU2S"].purge_speed}
 		{% endif %}
-		{% if printer["gcode_macro _VAR_MMU2S"].enable_length_sensor == 1 %}
-				M400
-				_CHECK_JAMMING
+		{% if printer["gcode_macro _VAR_MMU2S"].enable_motion_sensor %}
+		{% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 1 %}
+			FMS_DISABLE_T1
 		{% endif %}
-		{% if printer["gcode_macro _VAR_MMU2S"].enable_length_sensor == 1 %}
-				RESET_FILAMENT_LENGTH_SENSOR
 		{% endif %}
+		G92 E0
+		G1 E-{printer["gcode_macro _VAR_MMU2S"].purge_retract_at_end} F{printer["gcode_macro _VAR_MMU2S"].purge_speed}
 		G92 E0
 		G90
 	{% endif %}
@@ -544,7 +525,7 @@ gcode:
 	{% if printer["gcode_macro _CHECK_LOAD_FILAMENT_IN_EXTRUDER"].filament_in|int == 0 %}
 		QUERY_ENDSTOPS
 		MMU_RESPOND MSG="Loaded ? {printer["filament_switch_sensor ir_sensor"].filament_detected}"
-		{% if printer["filament_switch_sensor ir_sensor"].filament_detected == True %}
+		{% if printer["filament_switch_sensor ir_sensor"].filament_detected %}
 			MMU_RESPOND MSG="Check if filament is loaded"
 			G91
 			G92 E0
@@ -558,6 +539,7 @@ gcode:
 			_MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
 			G92 E0
 			G90
+			G4 P1000
 			M400
 		{% endif %}
 		_RETRY_LOAD_FILAMENT_IN_EXTRUDER
@@ -572,7 +554,7 @@ gcode:
 	MMU_RESPOND MSG="_RETRY_LOAD_FILAMENT_IN_EXTRUDER"
 	QUERY_ENDSTOPS
 	MMU_RESPOND MSG="Loaded ? {printer["filament_switch_sensor ir_sensor"].filament_detected}"
-	{% if printer["filament_switch_sensor ir_sensor"].filament_detected == False %}
+	{% if not printer["filament_switch_sensor ir_sensor"].filament_detected %}
 		MMU_RESPOND MSG="Retry loading ...."
 		{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 		{% if printer.extruder.temperature > printer["gcode_macro _VAR_MMU2S"].min_temp_extruder %}
@@ -627,10 +609,13 @@ gcode:
 		G92 E0
 		G90
 		M400
-		_CHECK_LOAD_FILAMENT_IN_EXTRUDER
-		_CHECK_LOAD_FILAMENT_IN_EXTRUDER
-		_CHECK_LOAD_FILAMENT_IN_EXTRUDER
-		_IS_FILAMENT_IN_EXTRUDER
+		{% if printer["gcode_macro _VAR_MMU2S"].enable_sensor_before_gear %}
+			G4 P1000
+			_CHECK_LOAD_FILAMENT_IN_EXTRUDER
+			_CHECK_LOAD_FILAMENT_IN_EXTRUDER
+			_CHECK_LOAD_FILAMENT_IN_EXTRUDER
+			_IS_FILAMENT_IN_EXTRUDER
+		{% endif %}
 		UNSELECT_TOOL
 		_PURGE_FILAMENT
 		MMU_RESPOND MSG="Load Complete"
@@ -643,7 +628,7 @@ gcode:
 # Retry unload, try correct misalignement of bondtech gear
 [gcode_macro _RETRY_UNLOAD_FILAMENT_IN_EXTRUDER]
 gcode:
-	{% if printer["filament_switch_sensor ir_sensor"].filament_detected == True %}
+	{% if printer["filament_switch_sensor ir_sensor"].filament_detected %}
 		MMU_RESPOND MSG="Retry unloading extruder...."
 		{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 		{% if printer.extruder.temperature > printer["gcode_macro _VAR_MMU2S"].min_temp_extruder %}
@@ -676,6 +661,9 @@ gcode:
 	{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 	{% if printer.extruder.temperature > printer["gcode_macro _VAR_MMU2S"].min_temp_extruder %}
 		MMU_RESPOND MSG="Unloading Filament..."
+		{% if printer["gcode_macro _VAR_MMU2S"].enable_filametrix_cut %}
+			_FILAMETRIX_CUT_FILAMENT
+		{% endif %}
 		G91
 		_MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro _VAR_MMU2S"].unload_in_extruder1} SPEED=10 SET_POSITION=0 SYNC=0
 		G1 E-{printer["gcode_macro _VAR_MMU2S"].unload_in_extruder1} F600
@@ -687,15 +675,47 @@ gcode:
 		G90
 		G92 E0
 		G4 P1000
-		_RETRY_UNLOAD_FILAMENT_IN_EXTRUDER
-		_RETRY_UNLOAD_FILAMENT_IN_EXTRUDER
-		_RETRY_UNLOAD_FILAMENT_IN_EXTRUDER
-		_IS_FILAMENT_STUCK_IN_EXTRUDER
+		{% if printer["gcode_macro _VAR_MMU2S"].enable_sensor_before_gear %}
+			_RETRY_UNLOAD_FILAMENT_IN_EXTRUDER
+			_RETRY_UNLOAD_FILAMENT_IN_EXTRUDER
+			_RETRY_UNLOAD_FILAMENT_IN_EXTRUDER
+			_IS_FILAMENT_STUCK_IN_EXTRUDER
+		{% endif %}
 		MMU_RESPOND MSG="Filament removed"
 	{% else %}
 		RESPOND MSG="Extruder too cold"
 		PAUSE_MMU
 	{% endif %}
+	{% endif %}
+
+# Cut with filametrix cutter
+[gcode_macro _FILAMETRIX_CUT_FILAMENT]
+gcode:
+	{% if printer["gcode_macro _VAR_MMU2S"].enable_filametrix_cut %}
+		MMU_RESPOND MSG="Filametrix cut"
+		G91
+		G92 E0.0
+		_MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro _VAR_MMU2S"].filametrix_unload_length1} SPEED=10 SET_POSITION=0 SYNC=0
+		G1 E-{printer["gcode_macro _VAR_MMU2S"].filametrix_unload_length1} F600
+		_MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+		G92 E0.0
+		G90
+		SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer["gcode_macro _VAR_MMU2S"].filametrix_x_current|float}
+		{% for i in range(printer["gcode_macro _VAR_MMU2S"].filametrix_nb_cut) %}
+			G1 X{printer["gcode_macro _VAR_MMU2S"].filametrix_pos_start} F2000
+			G1 X{printer["gcode_macro _VAR_MMU2S"].filametrix_pos_cut} F4000
+			G1 X{printer["gcode_macro _VAR_MMU2S"].pause_x} F2000
+		{% endfor %}
+		SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer.configfile.config["tmc2209 stepper_x"]["run_current"]}
+		G91
+		G92 E0.0
+		_MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro _VAR_MMU2S"].filametrix_unload_length2} SPEED=50 SET_POSITION=0 SYNC=0
+		G1 E-{printer["gcode_macro _VAR_MMU2S"].filametrix_unload_length2} F3000
+		_MMU_MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+		G92 E0.0
+		G90
+	{% else %}
+		MMU_RESPOND MSG="Filametrix not enable"
 	{% endif %}
 
 # Ramming process for standart PLA, code extracted from slic3r gcode
@@ -803,7 +823,7 @@ gcode:
 	{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 		{% if printer["gcode_macro SELECT_TOOL"].tool_selected|int != -1 %}
 			MMU_RESPOND MSG="Loading filament from MMU to extruder ..."
-			{% if printer["gcode_macro _VAR_MMU2S"].enable_5in1 == 0 %}
+			{% if not printer["gcode_macro _VAR_MMU2S"].enable_5in1 %}
 			_LOAD_FILAMENT_TO_PINDA
 			{% endif %}
 			_LOAD_FILAMENT_FROM_PINDA_TO_EXTRUDER
@@ -838,7 +858,7 @@ gcode:
 # Retry unload from splitter
 [gcode_macro _RETRY_UNLOAD_FILAMENT_IN_SPLITTER]
 gcode:
-	{% if printer["filament_switch_sensor splitter_sensor"].filament_detected == True %}
+	{% if printer["filament_switch_sensor splitter_sensor"].filament_detected %}
 		MMU_RESPOND MSG="Retry unloading splitter ...."
 		{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 			{% if printer.extruder.temperature > printer["gcode_macro _VAR_MMU2S"].min_temp_extruder %}
@@ -868,7 +888,7 @@ gcode:
 		{% if printer["gcode_macro SELECT_TOOL"].tool_selected|int != -1 %}
 			MMU_RESPOND MSG="Unloading filament from extruder to PINDA ..."
 			_MMU_MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
-			{% if printer["gcode_macro _VAR_MMU2S"].enable_5in1 == 0 %}
+			{% if not printer["gcode_macro _VAR_MMU2S"].enable_5in1 %}
 				_MMU_MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro _VAR_MMU2S"].bowden_unload_length} SPEED=120 STOP_ON_ENDSTOP=-2
 				_IS_FILAMENT_STUCK_IN_PINDA
 			{% else %}
@@ -893,7 +913,7 @@ gcode:
 		{% if printer["gcode_macro SELECT_TOOL"].tool_selected|int != -1 %}
 			MMU_RESPOND MSG="Unloading filament from extruder to MMU ..."
 			_UNLOAD_FILAMENT_FROM_EXTRUDER_TO_PINDA
-			{% if printer["gcode_macro _VAR_MMU2S"].enable_5in1 == 0 %}
+			{% if not printer["gcode_macro _VAR_MMU2S"].enable_5in1 %}
 				_UNLOAD_FILAMENT_FROM_PINDA
 			{% else %}
 				SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=color_selected VALUE=-1
@@ -915,7 +935,7 @@ gcode:
 variable_is_loaded: 0
 gcode:
 	QUERY_ENDSTOPS
-	{% if printer["filament_switch_sensor ir_sensor"].filament_detected == True %}
+	{% if printer["filament_switch_sensor ir_sensor"].filament_detected %}
 		SET_GCODE_VARIABLE MACRO=_VERIFY_FILAMENT_IN_EXTRUDER VARIABLE=is_loaded  VALUE={is_loaded|int + 1}
 	{% endif %}
 	G92 E0
@@ -987,7 +1007,7 @@ gcode:
 # Call PAUSE_MMU if the filament is detected by the IR sensor
 [gcode_macro _IS_FILAMENT_STUCK_IN_EXTRUDER]
 gcode:
-	{% if printer["filament_switch_sensor ir_sensor"].filament_detected == True %}
+	{% if printer["filament_switch_sensor ir_sensor"].filament_detected %}
 		RESPOND MSG="Filament stuck in extruder"
 		PAUSE_MMU
 	{% else %}
@@ -1012,7 +1032,7 @@ gcode:
 # Call PAUSE_MMU if the filament is detected by the splitter IR sensor
 [gcode_macro _IS_FILAMENT_STUCK_IN_SPLITTER]
 gcode:
-	{% if printer["filament_switch_sensor splitter_sensor"].filament_detected == True %}
+	{% if printer["filament_switch_sensor splitter_sensor"].filament_detected %}
 		RESPOND MSG="Filament stuck in splitter"
 		PAUSE_MMU
 	{% else %}
@@ -1055,7 +1075,7 @@ gcode:
 # Unselect the current tool
 [gcode_macro _END_M702]
 gcode:
-	{% if printer["gcode_macro _VAR_MMU2S"].enable_5in1 == 0 %}
+	{% if not printer["gcode_macro _VAR_MMU2S"].enable_5in1 %}
 		{% if printer.query_endstops.last_query["manual_stepper gear_stepper"] != 1 %}
 			UNSELECT_TOOL
 			MMU_RESPOND MSG="M702 ok ..."
@@ -1079,7 +1099,7 @@ gcode:
 [gcode_macro _EJECT_FROM_EXTRUDER]
 gcode:
 	{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
-		{% if printer["filament_switch_sensor ir_sensor"].filament_detected == True %}
+		{% if printer["filament_switch_sensor ir_sensor"].filament_detected %}
 			MMU_RESPOND MSG="Filament in extruder, trying to eject it .."
 			MMU_RESPOND MSG="Preheat Nozzle"
 			M109 S{printer["gcode_macro _VAR_MMU2S"].extruder_eject_temp}
@@ -1093,21 +1113,25 @@ gcode:
 # Eject from extruder gear to MMU2S
 [gcode_macro _EJECT_BEFORE_HOME]
 gcode:
-	MMU_RESPOND MSG="Eject Filament if loaded ..."
-	{% if printer["filament_switch_sensor ir_sensor"].filament_detected == True %}
-		_EJECT_FROM_EXTRUDER
-		_IS_FILAMENT_STUCK_IN_EXTRUDER
-	{% endif %}
-	{% if printer["gcode_macro _VAR_MMU2S"].enable_5in1 == 0 %}
-		{% if printer.query_endstops.last_query["manual_stepper gear_stepper"] == 1 %}
-			_UNLOAD_FILAMENT_FROM_EXTRUDER
-			_IS_FILAMENT_STUCK_IN_PINDA
-			MMU_RESPOND MSG="Filament ejected !"
+	{% if printer["gcode_macro _VAR_MMU2S"].enable_sensor_before_gear %}
+		MMU_RESPOND MSG="Eject Filament if loaded ..."
+		{% if printer["filament_switch_sensor ir_sensor"].filament_detected %}
+			_EJECT_FROM_EXTRUDER
+			_IS_FILAMENT_STUCK_IN_EXTRUDER
+		{% endif %}
+		{% if not printer["gcode_macro _VAR_MMU2S"].enable_5in1 %}
+			{% if printer.query_endstops.last_query["manual_stepper gear_stepper"] == 1 %}
+				_UNLOAD_FILAMENT_FROM_EXTRUDER
+				_IS_FILAMENT_STUCK_IN_PINDA
+				MMU_RESPOND MSG="Filament ejected !"
+			{% else %}
+				MMU_RESPOND MSG="Filament already ejected !"
+			{% endif %}
 		{% else %}
 			MMU_RESPOND MSG="Filament already ejected !"
 		{% endif %}
 	{% else %}
-		MMU_RESPOND MSG="Filament already ejected !"
+		MMU_RESPOND MSG="No filament sensor, could not check if Filament is ejected !"
 	{% endif %}
 
 ############################################
@@ -1147,7 +1171,7 @@ gcode:
 	RESPOND MSG="Homing idler"
 	_MMU_MANUAL_STEPPER STEPPER=idler_stepper SET_POSITION=0
 	_MMU_MANUAL_STEPPER STEPPER=idler_stepper MOVE=7
-	{% if printer["gcode_macro _VAR_MMU2S"].tmc2209_sensorless ==  0 %}
+	{% if not printer["gcode_macro _VAR_MMU2S"].tmc2209_sensorless %}
 		_MMU_MANUAL_STEPPER STEPPER=idler_stepper MOVE=-95
 	{% else %}
 		#NEEDED FOR SENSORLESS HOMING
@@ -1162,7 +1186,7 @@ gcode:
 gcode:
 	RESPOND MSG="Homing selector"
 	_MMU_MANUAL_STEPPER STEPPER=selector_stepper SET_POSITION=0
-	{% if printer["gcode_macro _VAR_MMU2S"].tmc2209_sensorless ==  0 %}
+	{% if not printer["gcode_macro _VAR_MMU2S"].tmc2209_sensorless %}
 		_MMU_MANUAL_STEPPER STEPPER=selector_stepper MOVE=-76
 	{% else %}
 		G4 P1000
@@ -1180,7 +1204,7 @@ gcode:
 gcode:
 	{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 		_HOME_IDLER
-		{% if printer["gcode_macro _VAR_MMU2S"].enable_5in1 == 0 %}
+		{% if not printer["gcode_macro _VAR_MMU2S"].enable_5in1 %}
 			_HOME_SELECTOR
 		{% endif %}
 		_MMU_MANUAL_STEPPER STEPPER=idler_stepper MOVE=0
@@ -1188,7 +1212,7 @@ gcode:
 		SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=color_selected VALUE=-1
 		MMU_RESPOND MSG="Test idler filament 0"
 		SELECT_TOOL VALUE=0
-		{% if printer["gcode_macro _VAR_MMU2S"].enable_5in1 == 0 %}
+		{% if not printer["gcode_macro _VAR_MMU2S"].enable_5in1 %}
 			MMU_RESPOND MSG="Test load filament 0"
 			_LOAD_FILAMENT_TO_PINDA
 			M400
@@ -1244,7 +1268,7 @@ gcode:
 
 [gcode_macro _TEST_RETRY_LOAD_FILAMENT_IN_EXTRUDER]
 gcode:
-	{% if printer["filament_switch_sensor ir_sensor"].filament_detected == False %}
+	{% if not printer["filament_switch_sensor ir_sensor"].filament_detected %}
 		MMU_RESPOND MSG="Retry loading ...."
 		{% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
 			MMU_RESPOND MSG="Loading Filament..."
