--- a/vking/printer-mmu2s-board.cfg
+++ b/vking/printer-mmu2s-board.cfg
@@ -20,6 +20,12 @@ restart_method: command
 [respond]
 default_type: command
 
+[temperature_sensor mcu_temp]
+sensor_mcu: mmboard
+sensor_type: temperature_mcu
+min_temp: 0
+max_temp: 100
+
 ########################################
 # E0 : MMU2S 5mm road with the 5 gears
 [tmc2208 manual_stepper gear_stepper]
