--- a/vking/printer-mmu2s-length-sensors.cfg
+++ b/vking/printer-mmu2s-length-sensors.cfg
@@ -1,50 +1,21 @@
 
 [mcu sensorboard]
-serial: /dev/ttyUSB0
-pin_map: arduino
+serial: /dev/serial/by-id/usb-1a86_USB2.0-Serial-if00-port0
+restart_method: arduino
 
-[filament_length_sensor l1]
-spi_speed: 4000000
-#   The SPI speed (in hz) to use when communicating with the chip.
-#   The default is 4000000.
-spi_bus: spi
-#spi_speed: 1000000
-#spi_software_sclk_pin: mmboard:PB3
-#spi_software_mosi_pin: mmboard:PB5
-# spi_software_miso_pin: mmboard:PB4
-#   These optional parameters allow one to customize the SPI settings
-#   used to communicate with the chip.
-sensor_pin: sensorboard:ar10
-#   The chip select line for the sensor chip. This parameter must be
-#   provided.
-#   118 pulse per rotation, mk8 circumference 21mm
-#   pulse_length = 118/21
-#   118 pulse per rotation, delrin wheel circumference 50
-#   pulse_length = 118/50
-pulse_length: 2.5
-enable: False
-#   Sensor enabled or disabled after power on. The default is to
-#   disable.
-max_mm_difference: 2.1
-max_mm_difference2: 10.0
-nb_error_needed: 3
-nb_value_ignore_at_start: 5
+[filament_motion_sensor T1]
+detection_length: 7.0
+#   The minimum length of filament pulled through the sensor to trigger
+#   a state change on the switch_pin
+#   Default is 7 mm.
 extruder: extruder
-#See [filament_switch_sensor] for a description of these parameters.
-pause_on_runout: False
-#   When set to True, a PAUSE will execute immediately after a runout
-#   is detected. Note that if pause_on_runout is False and the
-#   runout_gcode is omitted then runout detection is disabled. Default
-#   is True.
+#   The name of the extruder section this sensor is associated with.
+#   This parameter must be provided.
+switch_pin: sensorboard:ar2
+#pause_on_runout:
 #runout_gcode:
-#    M118 jamming/runout detected
-#    PAUSE_MMU
-#   A list of G-Code commands to execute after a filament runout is
-#   detected. See docs/Command_Templates.md for G-Code format. If
-#   pause_on_runout is set to True this G-Code will run after the
-#   PAUSE is complete. The default is not to run any G-Code commands.
 #insert_gcode:
-#   A list of G-Code commands to execute after a filament insert is
-#   detected. See docs/Command_Templates.md for G-Code format. The
-#   default is not to run any G-Code commands, which disables insert
-#   detection.
+#event_delay:
+#pause_delay:
+#   See the "filament_switch_sensor" section for a description of the
+#   above parameters.
